# project-apex-nexus

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  build_log_alpha5.txt  linux_log.txt  package.json  pnpm-lock.yaml  setup_github.ps1  windows_log.txt
.github/workflows/: build-binaries.yml
crates/cache/: Cargo.toml
crates/cache/src/: lib.rs
crates/chunker/: Cargo.toml
crates/chunker/src/: lib.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: graph.rs  lib.rs  parser.rs  resolver.rs  server.rs
crates/nexus_binding/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
crates/nexus_binding/npm/darwin-arm64/: README.md  package.json
crates/nexus_binding/npm/darwin-x64/: README.md  package.json
crates/nexus_binding/npm/linux-x64-gnu/: README.md  package.json
crates/nexus_binding/npm/win32-x64-msvc/: README.md  package.json
crates/nexus_binding/src/: lib.rs
crates/nexus_core/: Cargo.toml
crates/nexus_core/src/: bundler.rs  compiler.rs  graph.rs  lib.rs  parser.rs  resolver.rs  runtime.rs  watcher.rs
crates/nexus_core/tests/: asset_spec.rs  build_spec.rs  chunking_spec.rs  compiler_spec.rs  css_spec.rs  graph_spec.rs  hmr_spec.rs  linker_spec.rs  parser_spec.rs  refresh_spec.rs  resolver_spec.rs  shake_spec.rs  split_spec.rs
crates/nexus_core/tests/qa/: correctness_spec.rs  security_spec.rs  stress_spec.rs
docs/: EXECUTION_BACKLOG.md  EXECUTIVE_BRIEF.md  MVP_V0.1.md  PROJECT_APEX_STRATEGY.md  QA_ALPHA_REPORT.md  SPRINT_BACKLOG.md
examples/react-basic/: index.html  package.json
examples/react-basic/src/: App.tsx
examples/react-split/: index.html  package.json
examples/react-split/src/: App.tsx  Heavy.tsx
nexus-test/: index.html  package-lock.json  package.json
nexus-test/src/: App.tsx
playground/: index.html
