[package]
name = "nexus_core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
oxc_parser = "0.13"
oxc_allocator = "0.13"
oxc_span = "0.13"
oxc_ast = "0.13"
notify = "6.1"
tokio-stream = "0.1"
oxc_transformer = "0.13"
oxc_codegen = "0.13"
oxc_resolver = "1.6"
lightningcss = "1.0.0-alpha.63"
serde_json = "1.0"
