[package]
name = "nexus_core"
version = "0.1.0-alpha"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"
notify = "6.0"
axum = { version = "0.7", features = ["ws"] } # WebSocket support
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
oxc_allocator = "0.13.0"
oxc_parser = "0.13.0"
oxc_span = "0.13.0"
oxc_ast = "0.13.0"
oxc_codegen = "0.13.0"

[dev-dependencies]
tempfile = "3.8"
