[package]
name = "nexus_core"
version = "0.1.0-alpha"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"
notify = "6.0"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
mime_guess = "2.0"
lightningcss = "1.0.0-alpha.57"
base64 = "0.21"
urlencoding = "2.1"
oxc_allocator = "0.54"
oxc_parser = "0.54"
oxc_span = "0.54"
oxc_ast = "0.54"
oxc_codegen = "0.54"
oxc_ast_visit = "0.54"

[dev-dependencies]
tempfile = "3.8"
